# Hunter-Language

./: .gitignore  CMakeLists.txt  README.md  test-field.cpp
Compiler/: CMakeLists.txt
Compiler/src/: BuiltinFeatureGenerator.cpp  BuiltinFeatureGenerator.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  DataType.cpp  DataType.h  DebugData.cpp  DebugData.h  DebugGenerator.cpp  DebugGenerator.h  Expressions.cpp  Expressions.h  ImportResolver.cpp  ImportResolver.h  Parser.cpp  Parser.h  main.cpp
Compiler/src/utils/: files.cpp  files.h  logger.cpp  logger.h  strings.cpp  strings.h
Compiler/testing/: Parser.cpp
Examples/: c-library-integration.hunt  c-library-integration.hunt.txt  file-reading.hunt  first-const-string.hunt  first-const-string.hunt.txt  for-loop.hunt  for-loop.hunt.txt  function-calls-with-parameters.hunt  function-calls-with-parameters.hunt.txt  function-calls-without-parameters.hunt  function-calls-without-parameters.hunt.txt  function-returns.hunt  function-returns.hunt.txt  hello-world.hunt  hello-world.hunt.txt  if-else-conditions.hunt  if-else-conditions.hunt.txt  print-string-const.hunt  print-string-const.hunt.txt  simple-if-check.hunt  simple-if-check.hunt.txt  simple-structs.hunt  simple-structs.hunt.txt  single-line-comments.hunt  single-line-comments.hunt.txt  string-compare.hunt  string-compare.hunt.txt  typed-lists.hunt  use-all-int-types.hunt  use-all-int-types.hunt.txt  while-loop.hunt.txt
Examples/modules/: helpers.hunt  using-modules.hunt  using-modules.hunt.txt
Examples/modules/std/: filesystem.hunt
Hunter-Compiler/: compiler.hunt
Hunter-Compiler/std/: file.hunt  memory_management.hunt  string.hunt
Scripts/: CreateExecutable.sh  CreateSampleOutput.sh  ExecuteTests.py  RunCompiler.sh
